hphp/test/slow/parser/semi-reserved-keywords/type_const_bad.php.expectf
Fatal error: A name is expected here. in %s/test/slow/parser/semi-reserved-keywords/type_const_bad.php on line 4